# homeworks

./: CMakeLists.txt  animal.cpp  animal.h  computer.cpp  computer.h  figures.cpp  main.cpp
Animal/: bin_animal.cpp
Cart/: bin_cart.cpp  cart.cpp  cart.h  cart_list.cpp  cart_list.h  main.cpp  std_list.h
Computer/: bin_computer.cpp
Figures/: bin_figures.cpp  figures.h
Stack/: Stack.cpp  Stack.h  bin_stack.cpp
